k8s/routing/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: my-apps
  annotations:
    kubernetes.ioio/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
      - path: /s3
        pathType: Prefix
        backend:
          service:
            name: s3-service
            port:
              number: 80
